--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       background-size: cover;
     }
     body {
-      width: 100%;
-      height: 100%;
+/*       width: 100%;
+      height: 100%; */
     }
     .wave {
       position: absolute;
